# starbound-docker-steam

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  starbound-server.container
.github/workflows/: publish-docker-image.yml
container-scripts/: check_login.sh  check_update.py  constants.py  download_workshop_collections.sh  download_workshop_items.py  download_workshop_items.sh  entrypoint.sh  login.py  login.sh  main.py  run_shell_command.py  start_server.py  start_server.sh  update_starbound.py  update_starbound.sh
container-scripts/utils/: github.py  open_starbound.py  shell.py  starbound.py
container-scripts/utils/steam/: auth.py  update.py  workshop.py
