[project]
name = "starbound-docker-steam"
version = "1.0.0"
description = "Scripts for installing Starbound server and workshop mods"
authors = [
    {name = "Markus Renken", email = "z0n@users.noreply.github.com"},
]
dependencies = ["requests>=2.32.3"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]
